[PASELC-655] code smells